@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/python-distutils-extra
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-distutils-extra/ChangeLog,v 1.2 2009/10/07 14:48:35 volkmar Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-distutils-extra/ChangeLog,v 1.3 2009/11/03 21:59:10 arfrever Exp $
+
+*python-distutils-extra-2.12 (03 Nov 2009)
+
+  03 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +python-distutils-extra-2.12.ebuild:
+  Version bump (bug #291277). Set SUPPORT_PYTHON_ABIS.
 
   07 Oct 2009; Mounir Lamouri <volkmar@gentoo.org>
   python-distutils-extra-1.92_pre67.ebuild:
